# virtual_machines_course_2026

dumbstring/: CMakeLists.txt  README.md
dumbstring/doc/: TASK.md
dumbstring/include/: dumbstring.hpp
dumbstring/src/: dumbstring.cpp
dumbstring/tests/: test_basic.cpp  test_sort.cpp
memory_pool/: README.md
memory_pool/doc/: TASK.md  test.cc
memory_pool/src/: benchmark.zig  main.zig  pool.zig  root.zig
memory_pool_2/: README.md  build.zig  build.zig.zon
memory_pool_2/doc/: TASK.md
memory_pool_2/src/: benchmark.zig  locked_pool.zig  lockfree_pool.zig  main.zig  pool.zig  pool_registry.zig  root.zig
parallel_memcpy/: README.md  build.zig  build.zig.zon
parallel_memcpy/doc/: TASK.md
parallel_memcpy/src/: main.zig  root.zig
safe_byter/: Cargo.toml  README.md
safe_byter/src/: lib.rs
